feat: 實作server與client的驗證
完成demo中的server與client驗證機制
並重新修訂文檔內容